fix:arreglado datos añadidos descargas
